--- a/cbabcb3e84fc42d18f2c6d5eb55b4b36.opf/meta.yml
+++ b/cbabcb3e84fc42d18f2c6d5eb55b4b36.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     d65fba1695004fbb889e3811f01e09ba:
       base_file: v063.txt
       image_group_id: I1PD95909
-      title: ''
+      title: དྲན་པ་གཅིག་པའི་མན་ངག།
       total_pages: 1902
       volume_number: 64
