--- a/D4EE557B5.opf/index.yml
+++ b/D4EE557B5.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   2f1e771b5ec140ceb51c1b77d38eb580:
     parts: {}
+    work_id: D3928
     span:
-    - vol: 64
+    - base: 93b1
       start: 1
       end: 3134
-    work_id: D3928
